--- a/EmailService/Templates/change-password.vi.html
+++ b/EmailService/Templates/change-password.vi.html
@@ -6,12 +6,12 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
-  <title>Password Changed Successfully</title>
+  <title>Mật khẩu đã được thay đổi thành công</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
-  <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Your password has been changed successfully</div>
-  <div role="article" aria-roledescription="email" aria-label="Password Changed Successfully" lang="en" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
+  <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Mật khẩu đã được thay đổi thành công</div>
+  <div role="article" aria-roledescription="email" aria-label="Mật khẩu đã được thay đổi thành công" lang="vi" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
     <table style="width: 100%; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td align="center" style="mso-line-height-rule: exactly; background-color: #eceff1; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;">
