--- a/EmailService/Templates/deactivate-account.vi.html
+++ b/EmailService/Templates/deactivate-account.vi.html
@@ -9,12 +9,12 @@
   <!--[if mso]>
     <xml><o:officedocumentsettings><o:pixelsperinch>96</o:pixelsperinch></o:officedocumentsettings></xml>
   <![endif]-->
-    <title>Account Deactivated 😔</title>
+    <title>Tài khoản đã bị vô hiệu hóa 😔</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
-    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Your account on EDISA is deactivated.</div>
-  <div role="article" aria-roledescription="email" aria-label="Account Deactivated 😔" lang="en" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
+    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Tài khoản của bạn đã bị vô hiệu hóa.</div>
+  <div role="article" aria-roledescription="email" aria-label="Tài khoản đã bị vô hiệu hóa 😔" lang="vi" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
     <table style="width: 100%; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td align="center" style="mso-line-height-rule: exactly; background-color: #eceff1; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;">
