--- a/EmailService/Templates/register-google.ja.html
+++ b/EmailService/Templates/register-google.ja.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Welcome to EDISA</title>
+  <title>EDISAへようこそ！🎉</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
-  <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Welcome to EDISA - Google Login</div>
-  <div role="article" aria-roledescription="email" aria-label="Welcome Google User" lang="en" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
+  <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">EDISAへようこそ！🎉</div>
+  <div role="article" aria-roledescription="email" aria-label="EDISAへようこそ！🎉" lang="ja" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
     <table style="width: 100%; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td align="center" style="mso-line-height-rule: exactly; background-color: #eceff1; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;">
